--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -21,3 +21,19 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'FreightBig';
+  src: url('../assets/fonts/FreightBigProLight-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'FreightBig';
+  src: url('../assets/fonts/FreightBigProLight-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
