--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -37,3 +37,19 @@
   font-style: italic;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'HelveticaNow';
+  src: url('../assets/fonts/HelveticaNowDisplay-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'HelveticaNow';
+  src: url('../assets/fonts/HelveticaNowDisplay-Medium.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
